<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.SingInEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_bank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/MyEditText"
            android:layout_width="265dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/MyEditText"
            android:layout_width="265dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/editEmail"
            app:layout_constraintStart_toStartOf="@+id/editEmail"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <Button
            android:id="@+id/buttonSingInWithEmail"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_sing_in"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="@+id/editPassword"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

        <Button
            android:id="@+id/buttonToPhoneAuth"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sing_in_with_phone"
            android:textAllCaps="false"
            android:textColor="@color/main_color"
            android:textSize="13sp"
            android:textStyle="normal"
            app:iconPadding="2dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSingInWithEmail"
            app:layout_constraintEnd_toEndOf="@+id/buttonSingInWithEmail"
            app:layout_constraintStart_toStartOf="@+id/buttonSingInWithEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>