<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payments.TransactionConfirmationActivity">

    <TextView
        android:id="@+id/text_sum_transaction_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/ruble_symbol"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_sum_transaction_value"
        app:layout_constraintStart_toEndOf="@+id/text_sum_transaction_value"
        app:layout_constraintTop_toTopOf="@+id/text_sum_transaction_value"
        app:layout_constraintVertical_bias="0.642" />

    <TextView
        android:id="@+id/text_sum_transaction_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_sum_transaction_title"
        app:layout_constraintTop_toBottomOf="@+id/text_sum_transaction_title" />

    <TextView
        android:id="@+id/text_sum_transaction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pay_between_your_accounts_text_sum"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_write_off_transaction_title"
        app:layout_constraintTop_toBottomOf="@+id/text_destination_card_title" />

    <TextView
        android:id="@+id/text_destination_transaction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_destination_transaction"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_write_off_transaction_title"
        app:layout_constraintTop_toBottomOf="@+id/text_write_of_transaction_value" />

    <TextView
        android:id="@+id/text_write_of_transaction_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_write_off_transaction_title"
        app:layout_constraintTop_toBottomOf="@+id/text_write_off_transaction_title" />

    <TextView
        android:id="@+id/text_write_off_transaction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_write_off_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/back_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@color/main_color" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="@+id/toolbar3"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="@+id/toolbar3"
        app:srcCompat="@drawable/ic_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_transaction_confirm"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/button_confirm"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_destination_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/text_destination_transaction_title"
        app:layout_constraintTop_toBottomOf="@+id/text_destination_transaction_title" />

    <TextView
        android:id="@+id/text_destination_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/text_destination_transaction_title"
        app:layout_constraintTop_toBottomOf="@+id/text_destination_email" />

    <TextView
        android:id="@+id/text_destination_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/bank_account_tab_item_actions"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_destination_transaction_title"
        app:layout_constraintTop_toBottomOf="@+id/text_destination_phone" />

    <TextView
        android:id="@+id/text_destination_card_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/card_number_points"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_destination_card_title"
        app:layout_constraintStart_toEndOf="@+id/text_destination_card_title"
        app:layout_constraintTop_toTopOf="@+id/text_destination_card_title" />

    <TextView
        android:id="@+id/text_destination_card_short_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_destination_card_points"
        app:layout_constraintStart_toEndOf="@+id/text_destination_card_points"
        app:layout_constraintTop_toTopOf="@+id/text_destination_card_points" />

</androidx.constraintlayout.widget.ConstraintLayout>